--- a/demo/v2.html
+++ b/demo/v2.html
@@ -52,7 +52,8 @@
     </div>
     <div class="kmt-page-content">
       <div class="kmt-section">
-        <h2>Komito Analytics demo page</h2>
+        <h3>Komito Analytics demo</h3>
+        <p>See how to use Komito Analytics.</p>
         <p class="info">This page runs a Komito in debug mode. Please open Console to view dispatched events and sent requests.</p>
 
         <div class="kmt-parameter">
