--- a/integration/v2.html
+++ b/integration/v2.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" itemscope
       itemtype="http://schema.org/WebPage">
 <head>
+<script>if('http:'==location.protocol)location.replace(location.href.replace('http:','https:'))</script>
 <title itemprop="name">Komito Analytics Integration Instructions</title>
 <meta name="og:title" content="Komito Analytics Integration Instructions">
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -17,8 +18,6 @@
 <link rel="canonical" href="http://datamart.github.io/Komito/integration/">
 <link href="/Komito/favicon.ico" rel="shortcut icon">
 <link href="../styles-v2.css" rel="stylesheet">
-<!--[if lte IE 8]><style type="text/css">.dtm-grid,.dtm-header,.dtm-footer{min-width: 1140px;}</style><![endif]-->
-<!--[if lte IE 7]><style type="text/css">.dtm-grid-row{overflow:hidden;}</style><![endif]-->
 <script>if('https:'==location.protocol)location.replace(location.href.replace('https:','http:'))</script>
 </head>
 <body class="kmt-integration">
