Add metrics icons, Update homepage background, Update integration page

--- a/index.html
+++ b/index.html
@@ -112,9 +112,24 @@
             <h4>Print</h4>
             <i>Tracks page print actions.</i>
           </li>
+          <li>
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 64 64"><path fill="rgb(248,136,0)" d="M39.71,47.24,34.93,52v-19a2.09,2.09,0,1,0-4.17,0V52L26,47.24A2.09,2.09,0,1,0,23,50.19l8.34,8.34a2,2,0,0,0,.32.26l.15.08L32,59l.21.06.18.05a2.15,2.15,0,0,0,.41,0,2.08,2.08,0,0,0,.41,0l.18-.05.21-.06.2-.11.15-.08a2.14,2.14,0,0,0,.32-.26l8.34-8.34a2.09,2.09,0,1,0-3-2.95Z"/><path fill="rgb(248,136,0)" d="M52.48,23.67a19.16,19.16,0,0,0-4.88,0h-.16a1,1,0,0,1-.16-2.07,19.92,19.92,0,0,1,4.26-.13A15.74,15.74,0,0,0,36.06,7a16.52,16.52,0,0,0-12.81,6.39,9.36,9.36,0,0,1,3.34,7.17,1,1,0,1,1-2.09,0A7.29,7.29,0,0,0,20.42,14l-.22-.11a7.1,7.1,0,0,0-.87-.33l-.11,0a7.33,7.33,0,0,0-.82-.18l-.24,0a7.45,7.45,0,0,0-1-.07,7.31,7.31,0,0,0-7.3,7.3c0,.09,0,.17,0,.25v.39c0,.14,0,.27,0,.4v.66l-.59.28A12.4,12.4,0,0,0,2.6,33.23,11.32,11.32,0,0,0,13.91,44.54H28.67V33.07a4.17,4.17,0,0,1,8.34,0V44.54H50.54A10.47,10.47,0,0,0,61,34.09,10.69,10.69,0,0,0,52.48,23.67Z"/></svg>
+            <h4>Downloads</h4>
+            <i>Tracks files download links.</i>
+          </li>
+          <li>
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 64 64"><path fill="rgb(248,136,0)" d="M55.59,8.55A9.67,9.67,0,0,0,48.49,5.6H15A9.67,9.67,0,0,0,7.93,8.55,9.67,9.67,0,0,0,5,15.64V49.1A9.67,9.67,0,0,0,7.93,56.2,9.67,9.67,0,0,0,15,59.14H48.49a10.06,10.06,0,0,0,10-10V15.64A9.67,9.67,0,0,0,55.59,8.55Zm-6,24.94a2.08,2.08,0,0,1-1.36,2.06,2.43,2.43,0,0,1-.87.17,2.07,2.07,0,0,1-1.57-.66l-5-5L22.18,48.65a2.19,2.19,0,0,1-3.14,0L15.48,45.1a2.19,2.19,0,0,1,0-3.14L34.1,23.34l-5-5a2,2,0,0,1-.49-2.44,2.08,2.08,0,0,1,2.06-1.36H47.38a2.26,2.26,0,0,1,2.23,2.23V33.49Z"/></svg>
+            <h4>Outbound links</h4>
+            <i>Tracks outbound links.</i>
+          </li>
+          <li>
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 64 64"><polygon fill="rgb(248,136,0)" points="36.32 46.19 27.68 46.19 27.68 50.46 22.96 50.46 32 59.5 41.04 50.46 36.32 50.46 36.32 46.19"/><polygon fill="rgb(248,136,0)" points="27.68 17.81 36.32 17.81 36.32 13.54 41.04 13.54 32 4.5 22.96 13.54 27.68 13.54 27.68 17.81"/><rect fill="rgb(248,136,0)" x="14.32" y="21.79" width="35.36" height="20.38"/></svg>
+            <h4>Scroll</h4>
+            <i>Tracks scroll depth.</i>
+          </li>
         </ul>
-        <a href="./integration/#parameters" class="button grayscale"
-           title="See all Komito metrics">See all metrics</a>
+        <!-- <a href="./integration/#parameters" class="button grayscale"
+           title="See all Komito metrics">See all metrics</a> -->
       </div>
       <div class="kmt-section grayscale">
         <h3 class="thin-font">Cross-Compatible</h3>
