--- a/integration/index.html
+++ b/integration/index.html
@@ -64,11 +64,11 @@
         <h3>Integration of Komito Analytics</h3>
         <p>Step-by-step Komito Analytics integration instructions.</p>
         <p>
-          <b>1. </b>Adding <b>Komito Analytics</b> to your website is easy – just place this code below,
+          <b>1. </b>Adding <b>Komito Analytics</b> to a website is easy – just place this code below,
           ideally right before the closing <code>&lt;/body&gt;</code> tag:</p>
         <code><pre><span class="tag">&lt;script</span> <span class="atn">src</span>="<a href="//datamart.github.io/Komito/komito.js" target="_blank">//datamart.github.io/Komito/komito.js</a>"<span class="tag">&gt;&lt;/script&gt;<span></pre></code>
-        <p><b>2. Default Komito Analytics configuration:</b></p>
-          <code><pre>
+        <p>2. Default <b>Komito Analytics</b> configuration:</p>
+        <code><pre>
   <span class="tag">&lt;script&gt;</span>
     <span class="kwd">var</span> _komito = _komito || {
       <span class="str">'trackTwitter'</span>: 1,   <span class="com">// Tracks Twitter events if widget is presented on page.</span>
@@ -174,11 +174,10 @@
             </tr>
             <tr>
               <td colspan="2">
-                <p>Komito Analytics recognizes outbound links to social networks and lists those in the social report as well.<br>
+                <p>Komito Analytics also recognizes outbound links to social networks and lists those in the social report as well.<br>
                 <em>Supported social networks:</em> Google+, Blogger, Facebook, Twitter,
                   LinkedIn, MySpace, VKontakte, Odnoklassniki, Xing, YouTube, Twoo,
-                  Reddit, Pinterest, Digg, Foursquare.<br>
-                Also recognizes <a target="_blank" rel="nofollow"
+                  Reddit, Pinterest, Digg, Foursquare and <a target="_blank" rel="nofollow"
                   href="https://dev.twitter.com/web/intents">Twitter web intents</a>
                   links.</p>
               </td>
@@ -263,28 +262,43 @@
         </div>
       </div>
       <div class="kmt-section extra">
-        <h3>Komito with Google Tag Manager</h3>
-        <p>Learn how to use Komito and Google Tag Manager to track custom events occurring on your website</p>
+        <h3>Integration through Google Tag Manager</h3>
+        <p>
+          Learn how to use
+          <a href="https://www.google.com/analytics/tag-manager/" rel="nofollow"
+             title="Google Tag Manager - Tag Management Solutions for Web and Mobile">Google Tag Manager</a>
+          to integrate Komito Analytics into a website.
+        </p>
         <iframe width="420" height="315" src="https://www.youtube.com/embed/zrI0FlNSSA0"></iframe>
       </div>
       <div class="kmt-section extra">
         <p>
-          <!-- <em>Still have a questions?</em> -->
-          <a href="mailto:komito-support@dtm.io" class="button" title="Ask Komito support team">Ask Komito support team</a>
+          <a href="mailto:komito-support@dtm.io" class="button"
+             title="Ask Komito Analytics support team">Ask support team</a>
           <i class="or">-&nbsp;OR&nbsp;-</i>
-          <a href="../demo/v2.html" class="button grayscale" title="See Komito Analytics demo page">See Demo</a>
+          <a href="../demo/v2.html" class="button grayscale"
+             title="See Komito Analytics demo page">See Demo</a>
         </p>
       </div>
     </div>
     <div class="kmt-page-footer">
-      <a href="http://dtm.io" title="Datamart Inc."
-         class="dtm-logo"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+      <a href="//www.dtm.io" title="Datamart Inc."
+         class="dtm-logo"><svg xmlns="http://www.w3.org/2000/svg"
          width="33px" height="33px" viewBox="0 0 83 75"><path fill="#d61700" d="M41.008,0.938c9.558,0,18.338,3.321,25.255,8.87L29.338,2.652 C33.032,1.539,36.949,0.938,41.008,0.938L41.008,0.938z"/><path fill="#d61700" d="M78.159,25.45c0.784,1.833,1.438,3.736,1.947,5.696L36.787,80.062 l-21-66.474L78.159,25.45L78.159,25.45z"/><path fill="#d61700" d="M80.388,50.366C77.372,63.57,67.886,74.306,55.443,79.069L80.388,50.366L80.388,50.366z"/><path fill="#d61700" d="M21.163,76.523C8.896,69.589,0.612,56.431,0.612,41.333c0-6.387,1.484-12.427,4.124-17.796L21.163,76.523L21.163,76.523z"/></svg><span><i>Powered by</i><b>Datamart</b></span></a>
       <p>Komito Analytics is subject to the terms and conditions of
-        <a href="http://www.apache.org/licenses/LICENSE-2.0"
-           rel="nofollow"
+        <a href="//www.apache.org/licenses/LICENSE-2.0" rel="nofollow"
            title="Apache License">Apache License 2.0</a>
-        <br>© 2016 <a href="http://dtm.io" title="Datamart Inc.">Datamart Inc.</a>
+        <br>
+        <span itemprop="publisher" itemscope
+              itemtype="http://schema.org/Organization">
+          © <script>document.write((new Date).getFullYear())</script>
+          <a itemprop="url" href="//www.dtm.io" title="Datamart Inc."><span
+             itemprop="name">Datamart Inc.</span></a>
+          <meta itemprop="sameAs" content="https://plus.google.com/103753969968292534269">
+          <meta itemprop="sameAs" content="https://www.linkedin.com/company/datamartinc">
+          <meta itemprop="sameAs" content="https://www.facebook.com/datamartinc">
+          <meta itemprop="sameAs" content="https://twitter.com/thedatamartinc">
+        </span>
       </p>
     </div>
   </div>
