Updated navigation links on intergation page.

--- a/integration/index.html
+++ b/integration/index.html
@@ -44,18 +44,15 @@
       </div>
       <div class="kmt-navigation">
         <ul>
-          <li>
-            <a href="./" title="Komito Analytics overview page.">Overview</a>
-          </li>
-          <li>
-            <a href="./integration/" class="kmt-current-page" title="Step-by-step Komito Analytics integration instructions.">Integration</a>
-          </li>
-          <li><a href="./demo/" title="Komito Analytics demo page.">Demo</a></li>
-          <li>
-            <a href="//github.com/Datamart/Komito/tree/master"
-               target="_blank"
-               title="Get Komito Analytics Source Code.">Get source code</a>
-          </li>
+          <li><a title="Komito Analytics overview page."
+                 href="../">Overview</a></li>
+          <li><a title="Step-by-step Komito Analytics integration instructions."
+                 href="./" class="kmt-current-page">Integration</a></li>
+          <li><a title="Komito Analytics demo page."
+                 href="../demo/">Demo</a></li>
+          <li><a title="Get Komito Analytics Source Code."
+                 href="//github.com/Datamart/Komito/tree/master"
+                 target="_blank">Get source code</a></li>
         </ul>
       </div>
     </div>
