Updated text on intergation page.

--- a/integration/index.html
+++ b/integration/index.html
@@ -149,7 +149,7 @@
             </tr>
             <tr>
               <td colspan="2">
-                <em>Supported filenames:</em>
+                <em>Supported extension:</em>
                 <ul>
                   <li>Media: <samp>mp3, mp4, wma, mov, avi, wmv, mkv</samp></li>
                   <li>Fonts: <samp>eot, woff, ttf</samp></li>
