Updated default configuration code on intergation page.

--- a/integration/index.html
+++ b/integration/index.html
@@ -65,23 +65,22 @@
           ideally right before the closing <code>&lt;/body&gt;</code> tag:</p>
         <code><pre><span class="tag">&lt;script</span> <span class="atn">src</span>="<a href="//datamart.github.io/Komito/komito.js" target="_blank">//datamart.github.io/Komito/komito.js</a>"<span class="tag">&gt;&lt;/script&gt;<span></pre></code>
         <p>2. Default <b>Komito Analytics</b> configuration:</p>
-        <code><pre>
-  <span class="tag">&lt;script&gt;</span>
-    <span class="kwd">var</span> _komito = _komito || {
-      <span class="str">'trackTwitter'</span>: 1,   <span class="com">// Tracks Twitter events if widget is presented on page.</span>
-      <span class="str">'trackFacebook'</span>: 1,  <span class="com">// Tracks Facebook events if widget is presented on page.</span>
-      <span class="str">'trackLinkedIn'</span>: 1,  <span class="com">// Tracks LinkedIn events if plugin is presented on page.</span>
-      <span class="str">'trackDownloads'</span>: 1, <span class="com">// Tracks files download links.</span>
-      <span class="str">'trackOutbound'</span>: 1,  <span class="com">// Tracks outbound links.</span>
-      <span class="str">'trackForms'</span>: 1,     <span class="com">// Tracks forms submissions.</span>
-      <span class="str">'trackUsers'</span>: 1,     <span class="com">// Tracks pageviews by users logged in to social networks.</span>
-      <span class="str">'trackActions</span>': 1,   <span class="com">// Tracks 'mailto', 'tel', 'sms' and 'skype' actions.</span>
-      <span class="str">'trackPrint'</span>: 1,     <span class="com">// Tracks page print actions.</span>
-      <span class="str">'trackMedia'</span>: 1,     <span class="com">// Tracks HTML5 video, audio, Vimeo and YouTube players events.</span>
-      <span class="str">'trackScroll'</span>: 1,    <span class="com">// Tracks scroll depth.</span>
-      <span class="str">'debugMode'</span>: 0       <span class="com">// Prints all requests to console.</span>
-    };
-  <span class="tag">&lt;/script&gt;</span></pre></code>
+        <code><pre><span class="tag">&lt;script&gt;</span>
+  <span class="kwd">var</span> _komito = _komito || {
+    <span class="str">'trackTwitter'</span>: 1,   <span class="com">// Tracks Twitter events if widget is presented on page.</span>
+    <span class="str">'trackFacebook'</span>: 1,  <span class="com">// Tracks Facebook events if widget is presented on page.</span>
+    <span class="str">'trackLinkedIn'</span>: 1,  <span class="com">// Tracks LinkedIn events if plugin is presented on page.</span>
+    <span class="str">'trackDownloads'</span>: 1, <span class="com">// Tracks files download links.</span>
+    <span class="str">'trackOutbound'</span>: 1,  <span class="com">// Tracks outbound links.</span>
+    <span class="str">'trackForms'</span>: 1,     <span class="com">// Tracks forms submissions.</span>
+    <span class="str">'trackUsers'</span>: 1,     <span class="com">// Tracks pageviews by users logged in to social networks.</span>
+    <span class="str">'trackActions</span>': 1,   <span class="com">// Tracks 'mailto', 'tel', 'sms' and 'skype' actions.</span>
+    <span class="str">'trackPrint'</span>: 1,     <span class="com">// Tracks page print actions.</span>
+    <span class="str">'trackMedia'</span>: 1,     <span class="com">// Tracks HTML5 video, audio, Vimeo and YouTube players events.</span>
+    <span class="str">'trackScroll'</span>: 1,    <span class="com">// Tracks scroll depth.</span>
+    <span class="str">'debugMode'</span>: 0       <span class="com">// Prints all requests to console.</span>
+  };
+<span class="tag">&lt;/script&gt;</span></pre></code>
       </div>
       <div class="kmt-section" id="parameters">
         <h3>Komito Analytics parameters</h3>
