Updated text on intergation page.

--- a/integration/index.html
+++ b/integration/index.html
@@ -251,10 +251,14 @@
               <th><samp>debugMode</samp></th>
               <td>Prints all requests to console.</td>
             </tr>
+            <tr>
+              <td colspan="2">
+                <em>Note:</em>For production sites, you can enable
+                <samp>debugMode</samp> by adding <samp>debug=1</samp>
+                query parameter to current page URL.
+              </td>
+            </tr>
           </table>
-          <p><em>Note:</em> For production sites, you can enable
-            <samp>debugMode</samp> by adding <samp>debug=1</samp>
-            query parameter to current page URL.</p>
         </div>
       </div>
       <div class="kmt-section extra">
