Updated meta info on intergation page.

--- a/integration/index.html
+++ b/integration/index.html
@@ -2,30 +2,37 @@
 <html xmlns="http://www.w3.org/1999/xhtml" itemscope
       itemtype="http://schema.org/WebPage">
 <head>
-
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 
 <title>Komito Analytics Integration Instructions</title>
-<link rel="canonical" href="http://datamart.github.io/Komito/integration/">
-<link rel="publisher" href="https://plus.google.com/103753969968292534269" title="Google+">
-<meta name="description" content="Komito Analytics is an enhancement for the most popular web analytics software.">
+<link rel="canonical" href="https://datamart.github.io/Komito/integration">
+<meta name="description" content="Step-by-step Komito Analytics integration instructions.">
 
 <meta itemprop="name" content="Komito Analytics Integration Instructions">
-<meta itemprop="url" content="http://datamart.github.io/Komito/integration/">
-<meta itemprop="description" content="Komito Analytics is an enhancement for the most popular web analytics software.">
+<meta itemprop="url" content="https://datamart.github.io/Komito/integration">
+<meta itemprop="description" content="Step-by-step Komito Analytics integration instructions.">
 <meta itemprop="image" content="https://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
 
-<meta name="og:title" content="Komito Analytics Integration Instructions">
-<meta name="og:description" content="Komito Analytics is an enhancement for the most popular analytics software.">
-<meta name="og:image" content="http://datamart.github.io/Komito/images/komito-logo-600x455.png">
+<meta property="og:title" content="Komito Analytics Integration Instructions">
+<meta property="og:url" content="https://datamart.github.io/Komito/integration">
+<meta property="og:description" content="Step-by-step Komito Analytics integration instructions.">
+<meta property="og:image" content="https://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
+<meta property="og:type" content="website">
 
-<meta name="twitter:card" content="summary">
-<meta name="twitter:site" content="@vpodk">
-<meta name="twitter:url" content="http://datamart.github.io/Komito/integration/">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@thedatamartinc">
+<meta name="twitter:creator" content="@thedatamartinc">
+<meta name="twitter:title" content="Komito Analytics Integration Instructions">
+<meta name="twitter:url" content="https://datamart.github.io/Komito/integration">
+<meta name="twitter:description" content="Step-by-step Komito Analytics integration instructions.">
+<meta name="twitter:image" content="https://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
 
 <link href="/Komito/favicon.ico" rel="shortcut icon">
 <link href="../styles-v2.css" rel="stylesheet">
+<link rel="prefetch prerender" href="https://datamart.github.io/Komito/">
+<link rel="prefetch prerender" href="https://datamart.github.io/Komito/demo/">
+<link rel="publisher" href="https://plus.google.com/103753969968292534269" title="Google+">
 </head>
 <body class="kmt-integration">
   <div class="kmt-page">
