Updated navigation links.

--- a/index.html
+++ b/index.html
@@ -51,21 +51,15 @@
       </div>
       <div class="kmt-navigation">
         <ul>
-          <li>
-            <a href="./" class="kmt-current-page"
-               title="Komito Analytics overview page.">Overview</a>
-          </li>
-          <li>
-            <a title="Step-by-step Komito Analytics integration instructions."
-               href="./integration/">Integration</a>
-          </li>
-          <li>
-            <a href="./demo/"
-               title="Komito Analytics demo page.">Demo</a>
-          </li>
-          <li>
-            <a href="//github.com/Datamart/Komito/tree/master"
-               title="Get Komito Analytics source code.">Get source code</a>
+          <li><a title="Komito Analytics overview page."
+                 href="./" class="kmt-current-page">Overview</a></li>
+          <li><a title="Step-by-step Komito Analytics integration instructions."
+                 href="./integration/">Integration</a></li>
+          <li><a title="Komito Analytics demo page."
+                 href="./demo/">Demo</a></li>
+          <li><a title="Get Komito Analytics Source Code."
+                 href="//github.com/Datamart/Komito/tree/master"
+                 target="_blank">Get source code</a></li>
           </li>
         </ul>
       </div>
@@ -79,7 +73,7 @@
     <div class="kmt-page-content">
       <div class="kmt-section">
         <h3 class="thin-font">Advanced Metrics</h3>
-        <p>Unlock power of digital analytics with additional insights about visitor’s behavior.</p>
+        <p>Unlock the power of digital analytics with additional insights about visitor's behavior.</p>
         <ul class="kmt-metrics">
           <li>
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 64 64"><path fill="rgb(248,136,0)" d="M52.3,49.5c0,2.7,1.8,5.1,4.6,6.4v1c-5.1-0.1-9.8-0.9-14.2-5.2c-1,0.1-2.1,0.2-3.2,0.2c-4.7,0-9.1-1.3-12.5-3.4c7.2,0,13.9-2.3,19-6.4c2.6-2.1,4.6-4.5,6.1-7.2c1.5-2.9,2.3-5.9,2.3-9.1c0-0.5,0-1-0.1-1.5c3.6,2.9,5.8,6.9,5.8,11.3c0,5.1-3,9.7-7.6,12.6C52.3,48.8,52.3,49.1,52.3,49.5z M26.8,7c13.1,0,23.8,8.5,23.8,19c0,10.5-10.6,19-23.8,19c-1.3,0-2.5-0.1-3.7-0.2c-5.1,5-11,5.9-16.9,6v-1.2c3.2-1.5,5.7-4.3,5.7-7.5c0-0.5,0-0.9-0.1-1.3C6.4,37.2,3,31.9,3,26C3,15.5,13.6,7,26.8,7z"/></svg>
