--- a/integration/index.html
+++ b/integration/index.html
@@ -277,6 +277,10 @@
           to integrate Komito Analytics into a website.
         </p>
         <iframe width="420" height="315" src="https://www.youtube.com/embed/zrI0FlNSSA0"></iframe>
+        <div>
+          Thanks <a href="https://www.lovesdata.com">Loves Data</a> for great tutorial.
+          Watch more videos on their <a href="https://www.youtube.com/user/LovesData">YouTube channel</a>.
+        </div>
       </div>
       <div class="kmt-section extra">
         <p>
