Demo page updates

--- a/demo/v2.html
+++ b/demo/v2.html
@@ -2,30 +2,49 @@
 <html xmlns="http://www.w3.org/1999/xhtml" itemscope
       itemtype="http://schema.org/WebPage">
 <head>
-<title itemprop="name">Komito Analytics demo page</title>
-<meta name="og:title" content="Komito Analytics demo page">
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
-<meta name="description" content="Komito Analytics is an enhancement for the most popular analytics software.">
-<meta name="og:description" content="Komito Analytics is an enhancement for the most popular analytics software.">
-<meta name="og:image" content="http://datamart.github.io/Komito/images/komito-logo-600x455.png">
-<meta itemprop="image" content="http://datamart.github.io/Komito/images/komito-logo-120x90.png">
-<meta name="twitter:card" content="summary">
-<meta name="twitter:site" content="@vpodk">
-<meta name="twitter:url" content="http://datamart.github.io/Komito/demo">
-<meta itemprop="url" content="http://datamart.github.io/Komito/demo">
-<link rel="canonical" href="http://datamart.github.io/Komito/demo">
+
+<title>Komito Analytics Demo Page</title>
+<link rel="canonical" href="https://datamart.github.io/Komito/demo">
+<meta name="description" content="Komito Analytics demo page.">
+
+<meta itemprop="name" content="Komito Analytics Demo Page">
+<meta itemprop="url" content="https://datamart.github.io/Komito/demo">
+<meta itemprop="description" content="Komito Analytics demo page.">
+<meta itemprop="image" content="https://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
+
+<meta property="og:title" content="Komito Analytics Demo Page">
+<meta property="og:url" content="https://datamart.github.io/Komito/demo">
+<meta property="og:description" content="Komito Analytics demo page.">
+<meta property="og:image" content="https://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
+<meta property="og:type" content="website">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@thedatamartinc">
+<meta name="twitter:creator" content="@thedatamartinc">
+<meta name="twitter:title" content="Komito Analytics Demo Page">
+<meta name="twitter:url" content="https://datamart.github.io/Komito/demo">
+<meta name="twitter:description" content="Komito Analytics demo page.">
+<meta name="twitter:image" content="https://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
+
 <link href="/Komito/favicon.ico" rel="shortcut icon">
 <link href="../styles-v2.css" rel="stylesheet">
-<!--[if lte IE 8]><style type="text/css">.dtm-grid,.dtm-header,.dtm-footer{min-width: 1140px;}</style><![endif]-->
-<!--[if lte IE 7]><style type="text/css">.dtm-grid-row{overflow:hidden;}</style><![endif]-->
-<script>if('https:'==location.protocol)location.replace(location.href.replace('https:','http:'))</script>
+<link rel="prefetch prerender" href="https://datamart.github.io/Komito/">
+<link rel="prefetch prerender" href="https://datamart.github.io/Komito/integration/">
+<link rel="publisher" href="https://plus.google.com/103753969968292534269" title="Google+">
 </head>
 <body class="kmt-demo">
   <div class="kmt-page">
     <div class="kmt-page-header">
       <div class="kmt-logo">
-        <a href="/Komito/" title="Komito Homepage"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="45px" height="45px" viewBox="0 0 45 45"><polygon fill="#d02c00" points="0,0 0,20.1 19.8,0  "/><polygon fill="#fb8600" points="0,32 0,45 20.9,45 8.3,24.6   "/><polygon fill="#097AD2" points="33.6,45 45,45 45,0 32.3,0 14.6,18  "/></svg><span><b>Komito</b><i>Analytics</i></span></a>
+        <a href="/Komito/" title="Komito Analytics"><svg version="1.1"
+           xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="45px"
+           height="45px" viewBox="0 0 45 45"><polygon fill="#d20"
+           points="0,0 0,20.1 19.8,0"/><polygon fill="#f80"
+           points="0,32 0,45 20.9,45 8.3,24.6"/><polygon fill="#07d"
+           points="33.6,45 45,45 45,0 32.3,0 14.6,18"/></svg><span
+           class="thin-font"><b>Komito</b><i>Analytics</i></span></a>
       </div>
       <div class="hamburger">
         <div class="hamburger-box"><div class="hamburger-inner"></div></div>
@@ -33,13 +52,13 @@
       <div class="kmt-navigation">
         <ul>
           <li>
-            <a href="../v2.html" title="Komito Analytics overview page.">Overview</a>
+            <a href="../" title="Komito Analytics overview page.">Overview</a>
           </li>
           <li>
-            <a href="../integration/v2.html" title="Step-by-step Komito Analytics integration instructions.">Integration</a>
+            <a href="../integration/" title="Step-by-step Komito Analytics integration instructions.">Integration</a>
           </li>
           <li>
-            <a href="../demo/v2.html"
+            <a href="./"
                class="kmt-current-page"
                title="Komito Analytics demo page.">Demo</a></li>
           <li>
@@ -52,7 +71,7 @@
     </div>
     <div class="kmt-page-content">
       <div class="kmt-section">
-        <h3>Komito Analytics demo</h3>
+        <h3>Komito Analytics Demo</h3>
         <p>See how to use Komito Analytics.</p>
         <p class="info">This page runs a Komito in debug mode. Please open Console to view dispatched events and sent requests.</p>
 
@@ -258,7 +277,7 @@
 
       </div>
       <div class="kmt-section extra">
-        <p><em>Still have a questions?</em>
+        <p><em>Still have a questions?&nbsp;</em>
         <a href="mailto:komito-support@dtm.io" class="button" title="Ask Komito support team">Ask Komito support team</a>
         <i class="or">-&nbsp;OR&nbsp;-</i>
         <a href="//github.com/Datamart/Komito/issues" target="_blank" class="button grayscale" title="Post issue">Post issue</a>
@@ -319,7 +338,7 @@
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
   ga('create','UA-5065160-14','auto');ga('require','displayfeatures');ga('send','pageview');
   </script>
+
   <script>var _komito = {debugMode: 1};</script>
-  <script src="../scripts/functions.js"></script>
   <script src="//datamart.github.io/Komito/komito.js"></script>
 </body></html>
