Updated demo page. Task #14

--- a/integration/index.html
+++ b/integration/index.html
@@ -236,8 +236,8 @@
                 Tracks HTML5 video, audio,
                 <a target="_blank" rel="nofollow"
                    href="https://github.com/vimeo/player.js">Vimeo</a> and
-                <a target="_blank" rel="nofollow"
-                   href="https://developers.google.com/youtube/iframe_api_reference">YouTube</a> players events.
+                <a href="https://developers.google.com/youtube/iframe_api_reference"
+                   target="_blank" rel="nofollow">YouTube</a> players events.
               </td>
             </tr>
           </table>
@@ -279,7 +279,7 @@
         <iframe width="420" height="315" src="https://www.youtube.com/embed/zrI0FlNSSA0"></iframe>
         <div>
           Thanks <a href="https://www.lovesdata.com">Loves Data</a> for great tutorial.
-          Watch more videos on their <a href="https://www.youtube.com/user/LovesData">YouTube channel</a>.
+          Watch more videos on their <a href="https://www.youtube.com/user/LovesData" rel="nofollow">YouTube channel</a>.
         </div>
       </div>
       <div class="kmt-section extra">
@@ -287,7 +287,7 @@
           <a href="mailto:komito-support@dtm.io" class="button"
              title="Ask Komito Analytics support team">Ask support team</a>
           <i class="or">-&nbsp;OR&nbsp;-</i>
-          <a href="../demo/v2.html" class="button grayscale"
+          <a href="../demo/" class="button grayscale"
              title="See Komito Analytics demo page">See Demo</a>
         </p>
       </div>
