--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <meta name="twitter:image" content="https://datamart.github.io/Komito/images/komito-logo-600x455.jpg">
 
 <link href="/Komito/favicon.ico" rel="shortcut icon">
-<link href="styles-v2.css" rel="stylesheet">
+<link href="styles.css" rel="stylesheet">
 <link rel="prefetch prerender" href="https://datamart.github.io/Komito/integration/">
 <link rel="prefetch prerender" href="https://datamart.github.io/Komito/demo/">
 <link rel="publisher" href="https://plus.google.com/103753969968292534269" title="Google+">
